compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__supported_values.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: "1"

---
"_"@(FileId(1), 6..7) -> Integer(ConstInt { magnitude: 1, sign: Positive, width: As32 })


