compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__unsupported_ops-2.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: 1 >= 1

---
"_"@(FileId(1), 6..7) -> ConstError { kind: UnsupportedOp, span: (FileId(1), 13..15) }

error in file FileId(1) at 13..15: operation is currently not implemented for compile-time evaluation

