compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__unsupported_ops-3.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: 1 < 1

---
ConstEvalCtx {
    inner: RwLock {
        data: InnerCtx {
            eval_infos: [
                EvalInfo { unit_id: UnitId(0), span: Span { file: None, range: 11..16 }, state: Error(ConstError { kind: UnsupportedOp, span: Span { file: None, range: 13..14 } }) },
            ],
            var_to_expr: {
                GlobalDefId(UnitId(0), DefId(0)): ConstExpr { id: 0 },
            },
        },
    },
}
ConstExpr { id: 0 } -> ConstError { kind: UnsupportedOp, span: Span { file: None, range: 13..14 } }

error at 13..14: operation is currently not implemented for compile-time evaluation

