compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__unsupported_ops-4.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: 1 <= 1

---
InnerCtx {
    eval_infos: [
        EvalInfo { unit_id: UnitId(HirId(Idx::<HirNode>(4))), span: Span { file: None, range: 11..17 }, state: Error(ConstError { kind: UnsupportedOp, span: Span { file: None, range: 13..15 } }) },
    ],
    var_to_expr: {
        DefId(0): ConstExpr { id: 0 },
    },
}
ConstExpr { id: 0 } -> ConstError { kind: UnsupportedOp, span: Span { file: None, range: 13..15 } }

error at 13..15: operation is currently not implemented for compile-time evaluation

