compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__unsupported_ops-8.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: 1 ~in 1

---
ConstEvalCtx {
    inner: RwLock {
        data: InnerCtx {
            eval_infos: [
                EvalInfo { unit_id: UnitId(0), span: 11..18, state: Error(ConstError { kind: UnsupportedOp, span: 13..16 }) },
            ],
            var_to_expr: {
                GlobalDefId(UnitId(0), DefId(0)): ConstExpr { id: 0 },
            },
        },
    },
}
ConstExpr { id: 0 } -> ConstError { kind: UnsupportedOp, span: 13..16 }

error at 13..16: operation is currently not implemented for compile-time evaluation

