compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__unsupported_values-2.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: "const a := 'fun times'"

---
"a"@(FileId(1), 6..7) -> ConstError { kind: UnsupportedValue, span: (FileId(1), 11..22) }

error in file FileId(1) at 11..22: literal is currently not implemented for compile-time evaluation

