compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__unsupported_values-3.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: "const a := 'e'"

---
ConstEvalCtx {
    inner: RwLock {
        data: InnerCtx {
            eval_infos: [
                EvalInfo { unit_id: UnitId(0), span: Span { file: None, range: 11..14 }, state: Error(ConstError { kind: UnsupportedValue, span: Span { file: None, range: 11..14 } }) },
            ],
            var_to_expr: {
                GlobalDefId(UnitId(0), DefId(0)): ConstExpr { id: 0 },
            },
        },
    },
}
ConstExpr { id: 0 } -> ConstError { kind: UnsupportedValue, span: Span { file: None, range: 11..14 } }

error at 11..14: literal is currently not implemented for compile-time evaluation

